# FirstockPy

./: LICENSE  README.md
py-client/: pyproject.toml
py-client/examples/: __init__.py  base.py
py-client/examples/users/: client_details.py  get_hs_token.py  logout.py  save_fcm_token.py  user_details.py
py-client/py_client/: __init__.py  client.py
py-client/py_client/common/: enums.py
py-client/py_client/modules/alerts/: endpoints.py
py-client/py_client/modules/alerts/models/: __init__.py  cancel_gtt_order.py  get_enabled_alert_types.py  get_enabled_gtts.py  get_unsettled_trading_date.py  set_alert.py
py-client/py_client/modules/funds/: datasource.py
py-client/py_client/modules/funds/models/: get_content_basket.py  get_content_list.py
py-client/py_client/modules/holdings_limits/: __init__.py  endpoints.py
py-client/py_client/modules/holdings_limits/models/: limits.py
py-client/py_client/modules/markets/: datasource.py  endpoints.py
py-client/py_client/modules/markets/models/: __init__.py  get_broker_message.py  span_calculator.py  top_list.py  top_list_names.py
py-client/py_client/modules/orders/: __init__.py  endpoints.py
py-client/py_client/modules/orders/models/: __init__.py  convert_product.py  exit_sno_order.py  get_basket_margin.py  order_book.py  single_order_history.py
py-client/py_client/utils/: encoders.py
py-client/py_client/websocket/: __init__.py  client.py
py-client/scripts/: generate.py
py-client/scripts/assets/: generator_strings.py
py-client/tests/: test_py_client.py  test_user_module.py  test_watchlists_module.py
(+333 files in other folders)
